--- a/mhamada/mhamada.tex
+++ b/mhamada/mhamada.tex
@@ -3,36 +3,51 @@
 
 \begin{document}
 \section{平成３１年度名古屋大学文系大問２（1）の解答}
-$n=0$のとき，$\text{P}_0$の座標が$(1,0)$なので
 \[
 \begin{cases}
-x_1&=x_0-k(y_0+y_1) \\
-y_1&=y_0+k(x_0+x_1)
-\end{cases}
-\text{すなわち}
-\begin{cases}
-x_1&=1-ky_1 \\
-y_1&=k(1+x_1)
+x_{n+1}&=x_n-k(y_n+y_{n+1}) \\
+y_{n+1}&=y_n+k(x_n+x_{n+1})
 \end{cases}
 \]
-である．これより
+について，1行目を2行目に代入・整理すると
 \[
-\begin{cases}
-ky_1=1-x_1 \\
-ky_1=k^2(1+x_1)
-\end{cases}
+y_{n+1}=\frac{2k}{1+k^2}x_n+\frac{1-k^2}{1+k^2}y_n
 \]
+が得られる．
+さらに，この式を$x_{n+1}=x_n-k(y_n+y_{n+1})$に代入・整理すると
+\[
+x_{n+1}=\frac{1-k^2}{1+k^2}x_n-\frac{2k}{1+k^2}y_n
+\]
+が得られる．ここで
+\begin{align*}
+\frac{1-k^2}{1+k^2}
+&=(1-\tan^2(\frac{\alpha}{2}))\cos^2(\frac{\alpha}{2})
+=\cos^2(\frac{\alpha}{2})-\sin^2(\frac{\alpha}{2})
+=\cos\alpha，\\
+\frac{2k}{1+k^2}
+&=2\tan(\frac{\alpha}{2})\cos^2(\frac{\alpha}{2})
+=2\sin(\frac{\alpha}{2})\cos(\frac{\alpha}{2})
+=\sin\alpha
+\end{align*}
 であるから
 \[
-1-x_1=k^2(1+x_1)
-\text{ゆえに}
-x_1=\frac{1-k^2}{1+k^2}
+x_{n+1}=x_n\cos\alpha-y_n\sin\alpha，
+y_{n+1}=x_n\sin\alpha+y_n\cos\alpha
 \]
-が導かれる．さらに
+となる．
+$\mathrm{P}_0$の座標は$(1,0)$であるから
 \[
-ky_1=1-\frac{1-k^2}{1+k^2}=\frac{2k^2}{1+k^2}
-\text{ゆえに}
-y_1=\frac{2k}{1+k^2}
+x_1=x_0\cos\alpha-y_0\sin\alpha=\cos\alpha，
+y_1=x_0\sin\alpha+y_0\cos\alpha=\sin\alpha
 \]
+である．また
+\[
+x_2=x_1\cos\alpha-y_1\sin\alpha=\cos^2\alpha-\sin^2\alpha=\cos2\alpha，
+y_2=x_1\sin\alpha+y_1\cos\alpha=2\sin\alpha\cos\alpha=\sin2\alpha
+\]
+である．
+従って，
+$\mathrm{P}_1$の座標は$(\cos\alpha,\sin\alpha)$，
+$\mathrm{P}_2$の座標は$(\cos2\alpha,\sin2\alpha)$
 である．
 \end{document}
