--- a/名大過去問文系.tex
+++ b/名大過去問文系.tex
@@ -38,10 +38,18 @@
 %大問2（3）
 %
 
-
-
-
-
+ (2) より P$_n$, \ P$_{n + 1}$ の座標はそれぞれ $(\cos n \alpha, \sin n \alpha), \ (\cos (n + 1) \alpha, \sin (n + 1) \alpha)$ であるので,
+  \begin{align*}
+   \triangle P_n O P_{n + 1} &= |O P_n| |O P_{n + 1}| \frac{1}{2} \sin \angle P_n O P_{n + 1} \\
+                                   &= \frac{1}{2} \left| \sin (n + 1) \alpha \cos n \alpha - \sin n \alpha \cos (n + 1) \alpha \right| \\
+                                   &= \frac{1}{2} \left| \sin \alpha \right| \\
+                                   &= \frac{1}{2} \sin \alpha \\
+  \end{align*}
+ となる. ここで $\tan \left( \frac{\alpha}{2} \right) = k$ より, $\sin \alpha = \displaystyle \frac{2k}{1 + k^2}$ なので, 
+  \begin{align*}
+   \triangle P_n O P_{n + 1} &= \frac{1}{2} \sin \alpha = \frac{k}{1 + k^2}
+  \end{align*}
+ となる.
 
 %
 %大問３（１）
