--- a/main.tex
+++ b/main.tex
@@ -1,8 +1,9 @@
 \documentclass{jsarticle}
 
+\usepackage{subfiles}
 \usepackage{amsmath,amssymb}
 
-\title{title}
+\title{名古屋大学2019年度秋季社会数理概論II/応用数理II成果物}
 \author{}
 \date{}
 
@@ -10,7 +11,7 @@
 
 \maketitle
 
-hello, world
+\subfile{introduction}
 
 \end{document}
 
