大問2(3) 編集しました

--- a/名大過去問文系.tex
+++ b/名大過去問文系.tex
@@ -38,6 +38,7 @@
 %大問2（3）
 %
 
+\subsection*{(3)}
  (2) より P$_n$, \ P$_{n + 1}$ の座標はそれぞれ $(\cos n \alpha, \sin n \alpha), \ (\cos (n + 1) \alpha, \sin (n + 1) \alpha)$ であるので,
   \begin{align*}
    \triangle \textrm{P}_n \textrm{O} \textrm{P}_{n + 1} &= |\textrm{O} \textrm{P}_n| |\textrm{O} \textrm{P}_{n + 1}| \frac{1}{2} \sin \angle \textrm{P}_n \textrm{O} \textrm{P}_{n + 1} \\
