--- a/mhamada/mhamada.tex
+++ b/mhamada/mhamada.tex
@@ -1,8 +1,8 @@
-\documentclass{jsarticle}
-\usepackage{amsmath}
+\documentclass[../main]{subfiles}
+% \usepackage{amsmath}
 
 \begin{document}
-\section{平成３１年度名古屋大学文系大問２（1）の解答}
+\section*{平成３１年度名古屋大学文系大問２（1）の解答}
 \[
 \begin{cases}
 x_{n+1}&=x_n-k(y_n+y_{n+1}) \\
