--- a/kakomon.tex
+++ b/kakomon.tex
@@ -18,5 +18,9 @@
 \\11.1^2=123.2\cdots
 \\12.1^2=146.4\cdots
 \end{align*}
+以上より条件を満たす$n$は小さい順に
+$$
+26,37,50,65,82,101,102,122,123,145,\cdots
+$$
 よって145
 \end{document}
