--- a/文系2(3).tex
+++ b/文系2(3).tex
@@ -1,7 +1,7 @@
 \documentclass[a4j, 11pt]{jarticle}
-\usepackage{amsmath}
-\usepackage{amssymb}
-\usepackage{amsthm}
+% \usepackage{amsmath}
+% \usepackage{amssymb}
+% \usepackage{amsthm}
 
 \begin{document}
 
