Mac で作った TeX ファイルを Windows で打ち直しました

--- a/touhoku/doi.tex
+++ b/touhoku/doi.tex
@@ -1,6 +1,6 @@
 \documentclass[main]{jsarticle}
 
 \begin{document}
-%¤³¤³¤«¤é²¼¤Ë¤¤¤Ä¤âÄÌ¤êËÜÊ¸¤ò½ñ¤­¹ş¤à
-%¥Ş¥¯¥í¤ò»È¤¤¤¿¤¯¤Ê¤Ã¤¿¤é(/newcommand ¤È¤«) main.tex ¤Î¥×¥ê¥¢¥ó¥Ö¥ë¤Ë½ñ¤­¹ş¤à
+%‚±‚±‚Ö‚¢‚Â‚à’Ê‚è–{•¶‚ğ‘Å‚¿‚ß‚Î‚æ‚¢‚æ‚¤‚Å‚·D
+%ƒ}ƒNƒ‚ªg‚¢‚½‚¢ê‡‚Í main ‚ÌƒvƒŠƒAƒ“ƒuƒ‹‚Ö‘‚«‚ñ‚Å‚­‚¾‚³‚¢D
 \end{document}
