ochiai.tex にコメントを追加しました

--- a/touhoku/ochiai.tex
+++ b/touhoku/ochiai.tex
@@ -3,4 +3,6 @@
 \begin{document}
 %ここへいつも通り本文を打ち込めばよいようです．
 %マクロが使いたい場合は main のプリアンブルへ書き込んでください．
+%問題1. のように表示するときには，prob 環境を用います．
+%解答． と表示するのに，pf 環境を用います．
 \end{document}
