--- a/touhoku/main.tex
+++ b/touhoku/main.tex
@@ -3,6 +3,7 @@
 \usepackage{amsthm}
 \usepackage{amssymb}
 \usepackage{subfiles}
+\newcommand\Z{\mathbb{Z}}
 \newcommand\R{\mathbb{R}}
 \newcommand\C{\mathbb{C}}
 \theoremstyle{definition}
