--- a/touhoku/main.tex
+++ b/touhoku/main.tex
@@ -26,8 +26,8 @@
 
 
 \begin{document}
-\title{東北大学2019年度入試過去問数学理系}
-\author{OCHIAI Mio, DOI Jumpei}
+\title{東北過去問数学理系}
+\author{OM, DJ}
 \date{}
 \maketitle
 \newpage
