--- a/nu-rikei-4/Graph/circle.tex
+++ b/nu-rikei-4/Graph/circle.tex
@@ -7,6 +7,16 @@
  
 \begin{tikzpicture}
    
+   %
+   % 円弧の表し方は
+   %
+   % (≪座標P≫) arc[start angle=≪開始角α≫, end angle=≪終了角β≫, radius=≪半径r≫]
+   %
+   % または
+   %
+   % (≪座標P≫) arc (≪開始角α≫:≪終了角β≫:≪半径r≫)
+   %
+   
    \draw (0,0) arc (0:360:2cm);
    
 \end{tikzpicture}
