--- a/nu-r3.tex
+++ b/nu-r3.tex
@@ -5,11 +5,11 @@
 \usepackage{amssymb}
 %%%%%%%%%%%
 \begin{document}
-正の整数$n$の正の平方根$\sqrt{n}$が整数でなく, 十進数における小数点第1位が0となり, かつ第2位が0でないとき, $\sqrt{n}$の整数部分を$a$とおくと$a \ge 1$であり, $n$と$a$の関係は
+正の整数$n$の正の平方根$\sqrt{n}$の整数部分を$a$とおくと, $a \ge 1$である. このとき$\sqrt{n}$が整数でなく, 十進数における小数点第1位が0となり, かつ第2位が0でないための必要十分条件は
 \begin{equation*}
  a+0.01 \le \sqrt{n} < a+0.1
 \end{equation*}
-で表される. 各辺を2乗して$a^2$を引くと, $a \ge 1$から$0.02a+0.0001>0$となるため, 
+となる. 各辺を2乗して$a^2$を引くと, $a \ge 1$から$0.02a+0.0001>0$となるため, 
 \begin{equation}
  0 < 0.02a+0.0001 \le n-a^{2} < 0.2a+0.01
 \label{eq:1}
