LaTeXファイルの修正
角を表す文字をローマン体に直し，余分な見出し (3) を削除しました。

--- a/KakomonRikei_MatsuyamaSota.tex
+++ b/KakomonRikei_MatsuyamaSota.tex
@@ -7,45 +7,43 @@
 \section*{2}
 % (2)
 \subsection*{(2)}
-$\frac{\pi}{2} < \angle B'AC' < \pi$のとき, $\cos \angle B'AC < 0$なので,
-$\overrightarrow{AB'} \cdot \overrightarrow{AC'} < 0$
+$\frac{\pi}{2} < \angle \mathrm{B'AC'} < \pi$のとき, $\cos \angle \mathrm{B'AC} < 0$なので,
+$\overrightarrow{\mathrm{AB'}} \cdot \overrightarrow{\mathrm{AC'}} < 0$
 であることを示せば良い.
 \begin{align*}
-	&\quad \overrightarrow{AB'} \cdot \overrightarrow{AC'} \\
+	&\quad \overrightarrow{\mathrm{AB'}} \cdot \overrightarrow{\mathrm{AC'}} \\
 	%
-	&= (\overrightarrow{AB} + \overrightarrow{BB'}) \cdot
-	(\overrightarrow{AC} + \overrightarrow{CC'}) \\
+	&= (\overrightarrow{\mathrm{AB}} + \overrightarrow{\mathrm{BB'}}) \cdot
+	(\overrightarrow{\mathrm{AC}} + \overrightarrow{\mathrm{CC'}}) \\
 	%
-	&= \overrightarrow{AB} \cdot \overrightarrow{AC}
-	+ \overrightarrow{AB} \cdot \overrightarrow{CC'}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{AC}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{CC'} \\
+	&= \overrightarrow{\mathrm{AB}} \cdot \overrightarrow{\mathrm{AC}}
+	+ \overrightarrow{\mathrm{AB}} \cdot \overrightarrow{\mathrm{CC'}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{AC}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}} \\
 	%
-	&= 0 + (\overrightarrow{AB'} + \overrightarrow{B'B}) \cdot
-	\overrightarrow{CC'} + \overrightarrow{BB'} \cdot
-	(\overrightarrow{AC'} + \overrightarrow{C'C})
-	+ \overrightarrow{BB'} \cdot \overrightarrow{CC'} \\
+	&= 0 + (\overrightarrow{\mathrm{AB'}} + \overrightarrow{\mathrm{B'B}}) \cdot
+	\overrightarrow{\mathrm{CC'}} + \overrightarrow{\mathrm{BB'}} \cdot
+	(\overrightarrow{\mathrm{AC'}} + \overrightarrow{\mathrm{C'C}})
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}} \\
 	%
-	&= \overrightarrow{AB'} \cdot \overrightarrow{CC'}
-	+ \overrightarrow{B'B} \cdot \overrightarrow{CC'}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{AC'}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{C'C}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{CC'} \\
+	&= \overrightarrow{\mathrm{AB'}} \cdot \overrightarrow{\mathrm{CC'}}
+	+ \overrightarrow{\mathrm{B'B}} \cdot \overrightarrow{\mathrm{CC'}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{AC'}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{C'C}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}} \\
 	%
-	&= - \overrightarrow{BB'} \cdot \overrightarrow{CC'}
-	- \overrightarrow{BB'} \cdot \overrightarrow{CC'}
-	+ \overrightarrow{BB'} \cdot \overrightarrow{CC'} \\
+	&= - \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}}
+	- \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}}
+	+ \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}} \\
 	%
-	&= - \overrightarrow{BB'} \cdot \overrightarrow{CC'} \\
+	&= - \overrightarrow{\mathrm{BB'}} \cdot \overrightarrow{\mathrm{CC'}} \\
 	%
-	&= - |BB'| |CC'| \cos 0 < 0
-	\quad (\because BB' \parallel CC', 
-	\quad |BB'| > 0 \text{かつ} |CC'| > 0)
+	&= - |\mathrm{BB'}| |\mathrm{CC'}| \cos 0 < 0
+	\quad (\because \mathrm{BB'} \parallel \mathrm{CC'}, 
+	\quad |\mathrm{BB'}| > 0 \text{かつ} |\mathrm{CC'}| > 0)
 	%
 \end{align*}
 したがって, 
-$\overrightarrow{AB'} \cdot \overrightarrow{AC'} < 0$が成り立つので, 
-$\angle B'AC' > \frac{\pi}{2}$が成立する.
-% (3)
-\subsection*{(3)}
+$\overrightarrow{\mathrm{AB'}} \cdot \overrightarrow{\mathrm{AC'}} < 0$が成り立つので, 
+$\angle \mathrm{B'AC'} > \frac{\pi}{2}$が成立する.
 \end{document}
