--- a/main.tex
+++ b/main.tex
@@ -1,7 +1,10 @@
 \documentclass{jsarticle}
 
 \usepackage{subfiles}
-\usepackage{amsmath,amssymb}
+\usepackage{amsmath,amssymb,amsthm}
+\newtheorem{problem}{問題}
+\newtheorem{answer}{解答}
+\numberwithin{equation}{answer}
 
 \title{名古屋大学2019年度秋季社会数理概論II/応用数理II成果物}
 \author{}
@@ -12,6 +15,8 @@
 \maketitle
 
 \subfile{introduction}
+\section{Touhoku}
+\subfile{touhoku/github2}
 
 \end{document}
 
