--- a/名大文系.tex
+++ b/名大文系.tex
@@ -8,13 +8,30 @@
 
 \begin{document}
  
- $g(x) = F(x) - f(x)$が3つの異なる解をもつときの $a$の値を求める. \par
- 微分積分学の基本定理より, 
+ $g(x) = F(x) - f(x)$ とする. 曲線 $y = g(x)$ が $x$ 軸と異なる3つの交点をもつためには,  
+ $g(x)$ が2つの極値をもち, かつ極大値と極小値の積が負になればよい.  \par
+
+微分積分学の基本定理より, 
  \begin{equation*}
   \frac{d}{dx}\int_{0}^{x} f(t) dt =  f(x)
- \end{equation*}である. 
- この曲線と$x$軸が異なる3つの交点をもてばよい. 
- つまり, $g(x)$の極大値と極小値の積が負になればよい. 
+ \end{equation*}
+である. これより, 
+ \begin{align*}
+  g^{'}(x) &= f(x) - f^{'}(x)   \\
+           &= x^2 + (a - 2)x - 2a \\
+           &= (x + a)(x - 2)
+ \end{align*}
+よって, 求める条件は
+ \begin{equation}
+  a \neq -2
+ \end{equation}
+ \begin{equation}
+  g(-a)g(2) < 0
+ \end{equation}
+で与えられる. 
+
+
+ 
 
 
 \end{document}
