--- a/名大文系.tex
+++ b/名大文系.tex
@@ -29,6 +29,11 @@
   g(-a)g(2) < 0
  \end{equation}
 で与えられる. 
+\par
+ここで, 
+\begin{equation*}
+0>g(-a)g(2)=(F(-a)-f(-a))(F(2)-f(2))
+\end{equation*}
 
 
  
