--- a/main.tex
+++ b/main.tex
@@ -11,8 +11,10 @@
 
 \maketitle
 
-\subfile{introduction}
-
+%\subfile{introduction}
+%名大理系
+\subfile{yk/kakomon}
+%名大文系
 \subfile{mhamada/mhamada}
 
 \end{document}
