--- a/main.tex
+++ b/main.tex
@@ -2,9 +2,14 @@
 
 \usepackage{subfiles}
 \usepackage{amsmath,amssymb,amsthm}
+\newcommand\Z{\mathbb{Z}}
+\newcommand\R{\mathbb{R}}
+\newtheorem{prob}{問題}
 \newtheorem{problem}{問題}
+\newtheorem*{pf}{解答}
 \newtheorem{answer}{解答}
 \numberwithin{equation}{answer}
+\renewcommand{\labelenumi}{(\arabic{enumi})}
 
 \title{名古屋大学2019年度秋季社会数理概論II/応用数理II成果物}
 \author{}
@@ -17,6 +22,7 @@
 \subfile{introduction}
 \section{Touhoku}
 \subfile{touhoku/github2}
+\subfile{touhoku/doi}
 
 \end{document}
 
