--- a/rikei1-3/rikei1.tex
+++ b/rikei1-3/rikei1.tex
@@ -10,5 +10,5 @@
 \maketitle
 \paragraph{問題.1}
 (3) $z=k$と置く. $S$の存在範囲から$z$が$0\leq z \leq \frac{1}{2}$
-の時の断面積を積分すればよい. 各$k$の断面積を$S_k$と置く. aaa
+の時の断面積を積分すればよい. 各$k$の断面積を$S_k$と置く. 
 \end{document}  
