change for pull-request main.tex & nu-rikei-4/NUScimath4.tex

--- a/nu-rikei-4/NUScimath4.tex
+++ b/nu-rikei-4/NUScimath4.tex
@@ -1,9 +1,9 @@
 \documentclass[11pt]{jarticle}
-\usepackage[a4paper,hmargin=20mm,vmargin=15pt]{geometry}
-\usepackage{amsmath}
-\usepackage{amsthm}
-\usepackage{amssymb}
-\pagestyle{plain}
+% \usepackage[a4paper,hmargin=20mm,vmargin=15pt]{geometry}
+% \usepackage{amsmath}
+% \usepackage{amsthm}
+% \usepackage{amssymb}
+% \pagestyle{plain}
 \begin{document}
 \title{}
 \date{}
