syuusei shita main.tex

--- a/main.tex
+++ b/main.tex
@@ -27,8 +27,9 @@
 \section{Bunkei}
 \subfile{bunkei-2-3}
 
-\subfile{nu-rikei-4/NUScimath4}
-
 \subfile{mhamada/mhamada}
+
+\section{Rikei}
+\subfile{nu-rikei-4/NUScimath4}
 \end{document}
 
