--- a/名大文系.tex
+++ b/名大文系.tex
@@ -19,7 +19,7 @@
  \begin{align*}
   g^{'}(x) &= f(x) - f^{'}(x)   \\
            &= x^2 + (a - 2)x - 2a \\
-           &= (x + a)(x - 2)
+           &= (x + a)(x - 2).
  \end{align*}
 よって, 求める条件は
  \begin{equation}
@@ -32,9 +32,20 @@
 \par
 ここで, 
 \begin{equation*}
-0>g(-a)g(2)=(F(-a)-f(-a))(F(2)-f(2))
+0>g(-a)g(2)=(F(-a)-f(-a))(F(2)-f(2)).
 \end{equation*}
-
+さらに
+\[ F(x) = \frac{1}{3}x^3 + \frac{1}{2} ax^2 - ax \]
+なので
+\begin{align}
+g(-a) &= \frac{1}{6} a^3 +a^2 +a, \notag \\
+g(2) &= -(a+\frac{4}{3}) \notag
+\end{align}
+がわかる. つまり
+\[ g(-a) g(2) = -a(\frac{1}{6}a^2 + \frac{1}{2}a + 1)(a+\frac{4}{3}) \]
+が負となるような$a$の範囲を求めて$a \neq -2$を考慮すれば, それがいま考えている問題に対する答えである. $g(-a)g(2)<0$となる$a$の範囲は
+\[ a<-3-\sqrt{3} \ {\rm または} \ -\frac{4}{3} < a<  -3+\sqrt{3} \ {\rm または} \ a>0 \]
+である. これは$a=-2$を含まないので$(1)$ $(2)$を同時に満たす$a$の範囲である. よって, これが答えとなる.
 
  
 
