add my name on tex file

--- a/nu-rikei-4/NUScimath4.tex
+++ b/nu-rikei-4/NUScimath4.tex
@@ -23,6 +23,7 @@
 従って求める確率は, 
 \begin{equation*}
   \frac{4}{6} = \underline{\frac{2}{3}}
+% by 杉原宇宙(061700950) as s-sugihara%
 \end{equation*}
 (2)$n = 4$のとき長さ$4$のサイクルは相異なる$i, j, k, l \in \{ 1, 2, 3, 4 \}$を用いて以下のように表せる. 
 \begin{equation*}
