changes for subfiles package

--- a/nurikei2.2.tex
+++ b/nurikei2.2.tex
@@ -1,5 +1,4 @@
-\documentclass[dvipdfmx,autodetect-engine]{jsarticle}
-\usepackage{amsmath,amssymb,amsthm,stmaryrd,graphicx,tikz-cd}
+\documentclass[./main]{subfiles}
 
 
 \begin{document}
