--- a/nu-rikei-4/NUScimath4.tex
+++ b/nu-rikei-4/NUScimath4.tex
@@ -37,4 +37,5 @@
 \begin{equation*}
   (2, 3, 4, 1), (2, 4, 1, 3), (3, 4, 2, 1), (3, 1, 4, 2), (4, 3, 1, 2), (4, 1, 2, 3) 
 \end{equation*}
+% by 高野匠(061701051) as ttt-takano%
 \end{document}
