--- a/rikei1.2.tex
+++ b/rikei1.2.tex
@@ -7,7 +7,7 @@
 $ ( \tan \theta)' = \frac{1}{\cos^2 \theta} $ より、
 
 \begin{eqnarray}
- ( \tan \theta ・ \frac{1}{\cos^{n-2} \theta}) 
+ ( \tan \theta ・ \frac{1}{\cos^{n-2} \theta}) '
 & = & \frac{1}{\cos^n \theta} +  \tan \theta ・  \frac{2-n}{\cos^{n-1} \theta} ・ ( - \sin \theta) \\
 & = & \frac{1}{\cos^n \theta} +  \frac{n-2}{\cos^{n} \theta} ・ \sin^2 \theta \\
 & = & \frac{1}{\cos^n \theta} +  \frac{n-2}{\cos^{n} \theta} ・ (1 -  \cos^2 \theta ) \\
@@ -18,10 +18,21 @@ $ ( \tan \theta)' = \frac{1}{\cos^2 \theta} $ より、
 この式の両辺を０から$\frac{\pi}{3}$ まで積分する。
 
 \begin{eqnarray}
-(右辺）　
-& = & \int_{0}^{\frac{\pi}{3}} \frac{n-1}{\cos^{n} \theta} + \frac{n-2}{\cos^{n-2} \theta} \\
-& = & 
+(右辺） 
+& = &  \int_{0}^{\frac{\pi}{3}} (\frac{n-1}{\cos^{n} \theta} + \frac{n-2}{\cos^{n-2} \theta} ) d\theta \\
+& = & (n-1)I_{n} - (n-2) I_{n-2}
 \end{eqnarray}
 
+\begin{eqnarray}
+(左辺） 
+& = &  \int_{0}^{\frac{\pi}{3}} ( \tan \theta ・ \frac{1}{\cos^{n-2} \theta}) 'd\theta \\
+& = &　\sqrt{3}・\frac{1}{(\frac{1}{2})^{n-2}}
+\end{eqnarray}
+
+式を整理して、
+
+\begin{equation}
+I_{n}=\frac{(n-2)I_{n-2}+\sqrt{3}・2^{n-2}}{n-1}
+\end{equation}
 
 \end{document}
