--- a/rikei1-3/rikei1.tex
+++ b/rikei1-3/rikei1.tex
@@ -30,7 +30,8 @@
                                   &=\int_\frac{\pi}{3}^0 -\frac{\theta\sin\theta}{8\cos^4\theta}+\frac{\sin^2\theta}{8\cos^3\theta} d\theta\\
   &=\int_\frac{\pi}{3}^0\frac{\theta}{24}(\cos^{-3}\theta)'+\frac{1}{8\cos^3\theta}-\frac{1}{8\cos\theta} d\theta\\
   &=\frac{1}{24}\Bigl[\frac{\theta}{\cos^3\theta}\Bigl]_\frac{\pi}{3}^{0}-\frac{1}{24}\int_\frac{\pi}{3}^0\frac{1}{\cos^3\theta}+\frac{1}{8}\int_\frac{\pi}{3}^0\frac{1}{\cos^3\theta}-\frac{1}{8}\int_\frac{\pi}{3}^0\frac{1}{\cos\theta}\\
-  &=\frac{\pi}{9}-\frac{1}{12}I_3-\frac{1}{8}I_1\\
-  &=\frac{\pi}{9}-\frac{1}{12}\Bigl(\frac{\sqrt3}{2}+\frac{1}{2}I_1\Bigl)-\frac{1}{8}I_1
+  &=\frac{\pi}{9}-\frac{1}{12}I_3-\frac{1}{8}I_1
+  =\frac{\pi}{9}-\frac{1}{12}\Bigl(\frac{\sqrt3}{2}+\frac{1}{2}I_1\Bigl)-\frac{1}{8}I_1\\
+&=\frac{\pi}{9}-\frac{\sqrt{3}}{24}-\frac{\log(2+\sqrt{3})}{6}
 \end{align*}
 \end{document} 
