プリアンプル部を修正しました。

--- a/main.tex
+++ b/main.tex
@@ -2,6 +2,8 @@
 
 \usepackage{subfiles}
 \usepackage{amsmath,amssymb,amsthm}
+\usepackage[dvipdfmx]{graphicx}
+\usepackage{tikz}
 \newcommand\Z{\mathbb{Z}}
 \newcommand\R{\mathbb{R}}
 \newtheorem{prob}{問題}
