--- a/nu-rikei-4/NUScimath4.tex
+++ b/nu-rikei-4/NUScimath4.tex
@@ -3,8 +3,8 @@
 % \usepackage{amsmath}
 % \usepackage{amsthm}
 % \usepackage{amssymb}
-\usepackage[dvipdfmx]{graphicx}
-\usepackage{tikz}
+%\usepackage[dvipdfmx]{graphicx}
+%\usepackage{tikz}
 \pagestyle{plain}
 \begin{document}
 \title{}
